Fix for bug #15225 (ANALYZE temporary has no effect)

mysql-test/r/analyze.result:
  test result fixed
mysql-test/t/analyze.test:
  test case added
sql/sql_table.cc:
  we don't need to remove temporary table from the cache,
  but we need to reload it's info